--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.xlucash</groupId>
-    <artifactId>xlucashDrop</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>XL-Drop</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>xlucashDrop</name>
+    <name>xldrop</name>
 
     <properties>
         <java.version>1.8</java.version>
