--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: xlucashDrop
 version: '${project.version}'
-main: me.xlucash.xlucashdrop.DropMain
+main: me.xlucash.xldrop.DropMain
 api-version: '1.19'
 commands:
   drop:
