Added SQLite connection as default

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                                         <exclude>META-INF/*.SF</exclude>
                                         <exclude>META-INF/*.DSA</exclude>
                                         <exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF/services/java.sql.Driver</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
@@ -95,6 +96,11 @@
             <artifactId>SuperiorSkyblockAPI</artifactId>
             <version>2023.2</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.42.0.0</version>
         </dependency>
     </dependencies>
 </project>
