--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
                                         <exclude>META-INF/*.SF</exclude>
                                         <exclude>META-INF/*.DSA</exclude>
                                         <exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF.versions.9.module-info</exclude>
                                         <exclude>META-INF/services/java.sql.Driver</exclude>
                                     </excludes>
                                 </filter>
@@ -87,8 +88,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
         </dependency>
         <dependency>
