Added SuperiorSkyblock2 dependency

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,5 @@ permissions:
   drop.reload:
     description: Uprawnienie do przeładowania pluginu.
     default: op
+depend:
+  - SuperiorSkyblock2
